force-app/main/default/objects/User/fields/EN_shiten__c.field-meta.xml
<CustomField>
    <fullName>EN_shiten__c</fullName>
    <label>支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>