force-app/main/default/objects/User/fields/Orderby__c.field-meta.xml
<CustomField>
    <fullName>Orderby__c</fullName>
    <label>並び順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>