force-app/main/default/objects/User/fields/SOLXYZCSO001__ActiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ActiveStartDate__c</fullName>
    <label>利用開始日</label>
    <type>Date</type>
</CustomField>