force-app/main/default/objects/User/fields/SOLXYZCSO001__availabledisk__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__availabledisk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ディスク容量閾値有効</label>
    <type>Checkbox</type>
</CustomField>