force-app/main/default/objects/User/fields/SOLXYZCSO001__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Birthdate__c</fullName>
    <label>誕生日</label>
    <type>Date</type>
</CustomField>