force-app/main/default/objects/User/fields/SOLXYZCSO001__CSOChatter__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__CSOChatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleekdrive Chatter連携</label>
    <type>Checkbox</type>
</CustomField>