force-app/main/default/objects/User/fields/SOLXYZCSO001__deliverythreshold__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__deliverythreshold__c</fullName>
    <label>配信容量閾値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>