force-app/main/default/objects/User/fields/SOLXYZCSO001__DistributionSize__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DistributionSize__c</fullName>
    <inlineHelpText>Input -1 when no limit.</inlineHelpText>
    <label>配信容量(GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>