force-app/main/default/objects/User/fields/SOLXYZCSO001__DistributionUsedLabel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DistributionUsedLabel__c</fullName>
    <formula>SOLXYZCSO001__DistributionUsedText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配信使用量</label>
    <type>Text</type>
</CustomField>