force-app/main/default/objects/User/fields/SOLXYZCSO001__DistributionUsedText__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DistributionUsedText__c</fullName>
    <label>配信使用量(非表示対象)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>