force-app/main/default/objects/User/fields/SOLXYZCSO001__EmailAfter__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__EmailAfter__c</fullName>
    <label>EmailAfter</label>
    <type>Email</type>
</CustomField>