force-app/main/default/objects/User/fields/SOLXYZCSO001__FDLicenseType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__FDLicenseType__c</fullName>
    <label>Fleekdrive ライセンス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>