force-app/main/default/objects/User/fields/SOLXYZCSO001__FristFuriganaName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__FristFuriganaName__c</fullName>
    <label>名(フリガナ)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>