force-app/main/default/objects/User/fields/SOLXYZCSO001__IsMySpaceTakeOverToMyself__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsMySpaceTakeOverToMyself__c</fullName>
    <defaultValue>false</defaultValue>
    <label>マイスペースの引き継ぎフラグ</label>
    <type>Checkbox</type>
</CustomField>