force-app/main/default/objects/User/fields/SOLXYZCSO001__Locked__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ロック</label>
    <type>Checkbox</type>
</CustomField>