force-app/main/default/objects/User/fields/SOLXYZCSO001__TakeOverDstUidFreeSpace__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__TakeOverDstUidFreeSpace__c</fullName>
    <label>引継ぎ先ユーザID 公開スペース</label>
    <length>30</length>
    <type>Text</type>
</CustomField>