force-app/main/default/objects/User/fields/SOLXYZCSO001__TakeOverDstUidMySpace__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__TakeOverDstUidMySpace__c</fullName>
    <label>引継ぎ先ユーザID マイスペース</label>
    <length>30</length>
    <type>Text</type>
</CustomField>