force-app/main/default/objects/User/fields/SOLXYZCSO001__UseDiskSizeLabel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__UseDiskSizeLabel__c</fullName>
    <formula>SOLXYZCSO001__UseDiskSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ディスク使用量</label>
    <type>Text</type>
</CustomField>