force-app/main/default/objects/User/fields/ST_ID__c.field-meta.xml
<CustomField>
    <fullName>ST_ID__c</fullName>
    <label>帳票DX_印影ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>