force-app/main/default/objects/User/validationRules/SOLXYZCSO001__DisableCurrentUserEditLock.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__DisableCurrentUserEditLock</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( SOLXYZCSO001__Locked__c  ) , Id  =  $User.Id)</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__Locked__c</errorDisplayField>
    <errorMessage>ログイン中のユーザは自分をロックまたはアンロックすることはできません。</errorMessage>
</ValidationRule>