force-app/main/default/objects/User/validationRules/SOLXYZCSO001__DisableCurrentUserEditStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__DisableCurrentUserEditStartDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( SOLXYZCSO001__ActiveStartDate__c ) , Id  =  $User.Id)</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__ActiveStartDate__c</errorDisplayField>
    <errorMessage>自分自身の開始日を編集することはできません。</errorMessage>
</ValidationRule>