force-app/main/default/objects/User/validationRules/SOLXYZCSO001__EndDateBeforeCurrentDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__EndDateBeforeCurrentDateValidation</fullName>
    <active>false</active>
    <errorConditionFormula>(DATEVALUE(TEXT(SOLXYZCSO001__ActiveEndDate__c))  &lt; DATEVALUE(TEXT(NOW())))</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__ActiveEndDate__c</errorDisplayField>
    <errorMessage>利用終了日時は、現在よりも後の日時を設定してください。</errorMessage>
</ValidationRule>