force-app/main/default/objects/User/validationRules/SOLXYZCSO001__ExpiredUserEditLockValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__ExpiredUserEditLockValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(SOLXYZCSO001__Locked__c = FALSE, (OR((DATEVALUE(TEXT(SOLXYZCSO001__ActiveEndDate__c))  &lt; DATEVALUE(TEXT(NOW()))),(DATETIMEVALUE(
				RPAD(
					TEXT(SOLXYZCSO001__ActiveEndDate__c),
					19,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;&quot;),&quot; 00:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;00:00&quot;),&quot; 00:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;01:00&quot;),&quot; 01:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;02:00&quot;),&quot; 02:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;03:00&quot;),&quot; 03:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;04:00&quot;),&quot; 04:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;05:00&quot;),&quot; 05:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;06:00&quot;),&quot; 06:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;07:00&quot;),&quot; 07:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;08:00&quot;),&quot; 08:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;09:00&quot;),&quot; 09:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;10:00&quot;),&quot; 10:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;11:00&quot;),&quot; 11:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;12:00&quot;),&quot; 12:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;13:00&quot;),&quot; 13:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;14:00&quot;),&quot; 14:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;15:00&quot;),&quot; 15:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;16:00&quot;),&quot; 16:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;17:00&quot;),&quot; 17:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;18:00&quot;),&quot; 18:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;19:00&quot;),&quot; 19:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;20:00&quot;),&quot; 20:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;21:00&quot;),&quot; 21:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;22:00&quot;),&quot; 22:00:00 &quot;,
					IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;23:00&quot;),&quot; 23:00:00 &quot;, &quot;NO DATE&quot;)))))))))))))))))))))))))
				)
			)
			&lt;
			NOW()))))</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__Locked__c</errorDisplayField>
    <errorMessage>Cannot Unlock User After End Date. JA</errorMessage>
</ValidationRule>