force-app/main/default/objects/User/validationRules/SOLXYZCSO001__NewUserEndDateBeforeCurrentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__NewUserEndDateBeforeCurrentDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(), SOLXYZCSO001__ActiveEndDate__c &lt; DATEVALUE(NOW()))</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__ActiveEndDate__c</errorDisplayField>
    <errorMessage>利用終了日時は、現在よりも後の日時を設定してください。</errorMessage>
</ValidationRule>