force-app/main/default/objects/User/validationRules/SOLXYZCSO001__SameDayTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__SameDayTimeValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				DATEVALUE(TEXT(SOLXYZCSO001__ActiveStartDate__c)) = DATEVALUE(TEXT(SOLXYZCSO001__ActiveEndDate__c)),
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;&quot;),0,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;00:00&quot;),0,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;01:00&quot;),1,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;02:00&quot;),2,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;03:00&quot;),3,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;04:00&quot;),4,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;05:00&quot;),5,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;06:00&quot;),6,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;07:00&quot;),7,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;08:00&quot;),8,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;09:00&quot;),9,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;10:00&quot;),10,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;11:00&quot;),11,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;12:00&quot;),12,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;13:00&quot;),13,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;14:00&quot;),14,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;15:00&quot;),15,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;16:00&quot;),16,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;17:00&quot;),17,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;18:00&quot;),18,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;19:00&quot;),19,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;20:00&quot;),20,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;21:00&quot;),21,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;22:00&quot;),22,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveStartTime__c, &quot;23:00&quot;),23, 24)))))))))))))))))))))))))
				&gt;=
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;&quot;),0,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;00:00&quot;),0,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;01:00&quot;),1,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;02:00&quot;),2,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;03:00&quot;),3,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;04:00&quot;),4,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;05:00&quot;),5,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;06:00&quot;),6,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;07:00&quot;),7,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;08:00&quot;),8,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;09:00&quot;),9,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;10:00&quot;),10,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;11:00&quot;),11,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;12:00&quot;),12,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;13:00&quot;),13,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;14:00&quot;),14,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;15:00&quot;),15,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;16:00&quot;),16,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;17:00&quot;),17,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;18:00&quot;),18,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;19:00&quot;),19,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;20:00&quot;),20,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;21:00&quot;),21,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;22:00&quot;),22,
				IF(ISPICKVAL(SOLXYZCSO001__ActiveEndTime__c, &quot;23:00&quot;),23, 24)))))))))))))))))))))))))
			)</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__ActiveEndTime__c</errorDisplayField>
    <errorMessage>利用終了日時は、利用開始日時より後の日付を入力してください。</errorMessage>
</ValidationRule>