force-app/main/default/objects/User/validationRules/SOLXYZCSO001__StartDateAfterEndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SOLXYZCSO001__StartDateAfterEndDateValidation</fullName>
    <active>false</active>
    <errorConditionFormula>DATEVALUE(TEXT(SOLXYZCSO001__ActiveStartDate__c))  &gt; DATEVALUE(TEXT(SOLXYZCSO001__ActiveEndDate__c))</errorConditionFormula>
    <errorDisplayField>SOLXYZCSO001__ActiveEndDate__c</errorDisplayField>
    <errorMessage>利用終了日時は、利用開始日時より後の日付を入力してください。</errorMessage>
</ValidationRule>